usecases/001-ambient-rate-limiting/curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - name: curl
          image: curlimages/curl:8.16.0
          command: ["sleep", "infinity"]
