usecases/001-ambient-rate-limiting/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo
  namespace: echo
  labels:
    type: http-https-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      type: http-https-echo
  template:
    metadata:
      labels:
        type: http-https-echo
    spec:
      containers:
      - name: http-https-echo
        image: mendhak/http-https-echo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-https-echo
  namespace: echo
  labels:
    type: http-https-echo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    type: http-https-echo
