usecases/001-ambient-rate-limiting/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.istio-pocs-001"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
