usecases/001-ambient-rate-limiting/filter-static-tenancy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: filter-local-ratelimit-static-tenancy
  namespace: ingress
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: gateway

  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router

      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            value:
              stat_prefix: static_tenant_local_rate_limit

    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: "echo.istio-pocs-001:80"
            route:
              action: ANY

      patch:
        operation: MERGE
        value:
          typed_per_filter_config:
            envoy.filters.http.local_ratelimit:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit

              value:
                stat_prefix: static_tenant_local_rate_limit
  
                # Default bucket.
                always_consume_default_token_bucket: false
                token_bucket:
                  max_tokens: 4
                  tokens_per_fill: 4
                  fill_interval: 60s

                filter_enabled:
                  default_value:
                    numerator: 100
                    denominator: HUNDRED

                filter_enforced:
                  default_value:
                    numerator: 100
                    denominator: HUNDRED

                response_headers_to_add:
                  - append: false
                    header:
                      key: x-local-rate-limit
                      value: "true"

                rate_limits:
                  - actions:
                      - request_headers:
                          header_name: x-tenant
                          descriptor_key: tenant

                descriptors:
                  # tenant-a
                  - entries:
                      - key: tenant
                        value: tenant-a
                    token_bucket:
                      max_tokens: 4
                      tokens_per_fill: 4
                      fill_interval: 60s

                  # tenant-b
                  - entries:
                      - key: tenant
                        value: tenant-b
                    token_bucket:
                      max_tokens: 4
                      tokens_per_fill: 4
                      fill_interval: 60s
