usecases/001-ambient-rate-limiting/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-http-api
  namespace: echo
spec:
  parentRefs:
  - name: gateway
    namespace: ingress
  hostnames:
  - "echo.istio-pocs-001"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: http-https-echo
      port: 8080
